# protobuf_to_pydantic

./: .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  README_ZH.md  demo.proto  demo_p2p.py  gen_rpc.sh  pyproject.toml  requirements-dev.txt  requirements-no-grpc-dev.txt  requirements-no-grpc.txt  requirements.txt  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: python-package.yml
bsr/: Dockerfile  buf.plugin.yaml  pyproject.toml  requirements.txt
buf-plugin/: README.md  README_ZH.md
buf-plugin/pydantic-v1-std/: buf.plugin.yaml  requirements.txt
buf-plugin/pydantic-v2-std/: Dockerfile  buf.plugin.yaml  pyproject.toml  requirements.txt
example/: all_field_set_option_config.py  custom_comment_handler_pkg_plugin_config.py  demo_gen_code.py  demo_gen_code_by_protobuf_field.py  demo_gen_code_by_pyi.py  enum_desc_plugin_config.py  gen_enum_desc_code.py  gen_example_proto.sh  gen_p2p_code.py  gen_rpc.sh  gen_simple_code.py  gen_text_comment_code.py  gen_validate_code.py  p2p_validate_by_comment_gen_code.py  plugin_config.py  populate_by_name_plugin_config.py  run.sh  run_example_gen_code.sh  simple_gen_code.py  single_config_pkg_plugin_config.py
example/example_proto/book/: manager.proto  social.proto
example/example_proto/common/: p2p_validate.proto  single.proto
example/example_proto/demo/: alias_demo.proto  all_feidl_set_optional_demo.proto  custom_comment_handler.proto  demo.proto  diff_pkg_refer_1.proto  diff_pkg_refer_2.proto  field_name_conflict.proto  nested_enum_scope.proto  single_config.proto
example/example_proto/p2p_validate/: demo.proto
example/example_proto/p2p_validate_by_comment/: demo.proto
example/example_proto/test_ignore/: ignored_pkg.proto  main_pkg.proto
example/example_proto/user/: user.proto
example/example_proto/validate/: demo.proto
example/p2p_validate_example/: demo_gen_code_by_p2p.py  gen_code.py
example/proto/: demo_gen_code.py  demo_gen_code_by_p2p.py  demo_gen_code_by_pgv.py  demo_gen_code_by_text_comment_protobuf_field.py
example/proto_3_20/: demo_gen_code.py  demo_gen_code_by_p2p.py  demo_gen_code_by_pgv.py  demo_gen_code_by_text_comment_protobuf_field.py  demo_gen_code_by_text_comment_pyi.py
example/proto_3_20_pydanticv1/: demo_gen_code.py  demo_gen_code_by_enum_desc.py  demo_gen_code_by_p2p.py  demo_gen_code_by_pgv.py  demo_gen_code_by_text_comment_protobuf_field.py  demo_gen_code_by_text_comment_pyi.py
example/proto_3_20_pydanticv2/: demo_gen_code.py  demo_gen_code_by_enum_desc.py  demo_gen_code_by_p2p.py  demo_gen_code_by_pgv.py  demo_gen_code_by_text_comment_protobuf_field.py  demo_gen_code_by_text_comment_pyi.py
example/proto_pydanticv1/: demo_gen_code.py  demo_gen_code_by_enum_desc.py  demo_gen_code_by_p2p.py  demo_gen_code_by_pgv.py  demo_gen_code_by_text_comment_protobuf_field.py  demo_gen_code_by_text_comment_pyi.py
example/proto_pydanticv2/: demo_gen_code.py  demo_gen_code_by_enum_desc.py  demo_gen_code_by_p2p.py  demo_gen_code_by_pgv.py  demo_gen_code_by_text_comment_protobuf_field.py  demo_gen_code_by_text_comment_pyi.py
example/simple_example/: demo_gen_code.py  gen_code.py
example/text_comment_example/: gen_code.py
example/text_comment_example/not_use_module_path/: demo_gen_code_by_protobuf_field.py  demo_gen_code_by_pyi.py
example/text_comment_example/use_module_path/: demo_gen_code_by_protobuf_field.py  demo_gen_code_by_pyi.py
example/validate_example/: demo_gen_code_by_pgv.py  gen_code.py
images/: protobuf-to-pydantic_index.drawio  protobuf_to_pydantic_index.drawio
p2p_validate/: p2p_validate_pb2.py
protobuf_to_pydantic/: __init__.py  __main__.py  __version__.py  _pydantic_adapter.py  cli.py  constant.py  core.py  customer_con_type.py  customer_validator.py  exceptions.py  field_param.py  gen_code.py  gen_model.py  get_desc.py  grpc_types.py  message_to_pydantic.py  types.py  util.py
protobuf_to_pydantic/contrib/: proto_parser.py
protobuf_to_pydantic/customer_con_type/: __init__.py  v1.py  v2.py
protobuf_to_pydantic/customer_validator/: __init__.py  rule.py  v1.py  v2.py
protobuf_to_pydantic/desc_template/: __init__.py
protobuf_to_pydantic/field_info_rule/: field_info_param.py  types.py
protobuf_to_pydantic/field_info_rule/protobuf_option_to_field_info/: base.py  comment.py  desc.py  types.py
protobuf_to_pydantic/get_desc/: __init__.py  from_pgv.py  from_proto_file.py  from_pyi_file.py  utils.py
protobuf_to_pydantic/get_desc/from_pb_option/: __init__.py  base.py  from_p2p.py  from_pgv.py  types.py
protobuf_to_pydantic/get_desc/from_pgv/: __init__.py  customer_validator.py
protobuf_to_pydantic/get_message_option/: __init__.py  from_proto_file.py  from_pyi_file.py  utils.py
protobuf_to_pydantic/get_message_option/from_message_option/: __init__.py  base.py  from_p2p.py  (+1 more)
protobuf_to_pydantic/plugin/: cli.py  code_gen.py  config.py  field_desc_proto_to_code.py  main.py  my_types.py
protobuf_to_pydantic/protos/: p2p_validate_pb2.py  validate_pb2.py  validate_pb2.pyi
protobuf_to_pydantic/template/: __init__.py
protos/: buf.yaml  p2p_validate.proto
scripts/: gen_example_proto.sh  gen_proto.sh  run_example_gen_code.sh
tests/: __init__.py  conftest.py  test_gen_model_validator.py  test_p2p_validate.py  test_simple.py  test_text_comment.py  test_validate.py
tests/base/: base_demo_validate.py  base_p2p_validate.py  test_pgv_validate.py
tests/test_gen_code/: test_field_name_conflicts.py  test_helper.py
tests/test_gen_code_output/: test_p2p_validate.py  test_simple.py  test_text_comment.py  test_validate.py
tests/test_gen_code_validate_in_runtime/: test_p2p_validate.py  test_p2p_validate_by_protobuf_field_with_comment.py  test_p2p_validate_by_pyi_with_comment.py  test_pgv_validate.py
tests/test_gen_model_validate_in_runtime/: test_p2p_validate.py  test_pgv_validate.py
tests/test_other/: test_customer_con_type.py  test_plugin_config.py  test_proto_gen.py
tests/test_plugin/: test_p2p_validate.py  test_pgv_validate.py
tests/test_plugin_gen_code_validate_in_runtime/: test_p2p_validate.py  test_pgv_validate.py
(+255 files in other folders)
