[tool.poetry]
name = "protobuf_to_pydantic"
version = "0.0.0"
description = "Convert Protobuf-generated Python objects to Pydantic.BaseModel objects with parameter checksum"
authors = ["So1n <so1n897046026@gmail.com>"]
license = "Apache Software License"
readme = "./README.md"
repository = "https://github.com/so1n/protobuf_to_pydantic"
homepage = "https://github.com/so1n/protobuf_to_pydantic"
packages = [
    { include = "protobuf_to_pydantic" },
]

[tool.poetry.scripts]
protoc-gen-protobuf-to-pydantic = "protobuf_to_pydantic.plugin.main:main"


[tool.poetry.dependencies]
python = "^3.7"
lark = { version = "^1.1.2", optional = true }
mypy-protobuf = { version = "^3.2.0", optional = true }
pydantic = "^1.9.1"
grpcio-tools = "^1.40"

[tool.poetry.extras]
lark = ["lark"]
mypy-protobuf = ["mypy-protobuf"]
all = ["lark", "mypy-protobuf"]

[tool.poetry.dev-dependencies]
black = "20.8b1"
mypy = "0.790"
pytest = "6.1.2"
isort = "5.6.4"
coverage = "5.5"
pre-commit = "2.14.0"
autoflake = "1.4"
flake8 = "3.9.2"
yapf = "^0.32.0"
email-validator = "^1.2.1"
# fix flake8 run bug: https://stackoverflow.com/questions/73929564/entrypoints-object-has-no-attribute-get-digital-ocean
importlib-metadata = "4.11.4"

[tool.black]
line-length = 120
target-version = ['py37']

[tool.yapf]
based_on_style = "google"
COLUMN_LIMIT = 120
spaces_before_comment = 4
# split_before_logical_operator = true

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.mypy]
disallow_untyped_defs = true
python_executable = ".venv/bin/python"
exclude = [
    "^example/python_example_proto_code/example_proto"
]


[tool.pytest]
testpaths = "tests"

[tool.coverage.run]
branch = true
source = ["protobuf_to_pydantic"]
omit = [
    "protobuf_to_pydantic/contrib/proto_parser.py",
    # The plugin cannot be tested,
    # only by checking the running result of the generated code to judge whether the plugin is executed successfully
    "protobuf_to_pydantic/plugin/*",
]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    "continue",

    # type hints
    "if TYPE_CHECKING:",
    "pass",

    # error
    "except ImportError:",
    "except ModuleNotFoundError:"
]


[tool.poetry-dynamic-versioning]
enable = true
metadata=false
vcs = "git"
format = "v{base}"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
