[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "protobuf_to_pydantic"
dynamic = ["version"]
description = "Generate the `pydantic.BaseModel` class (and the corresponding source code) with parameter verification function through the Protobuf file"
authors = [
    {name = "So1n", email = "so1n897046026@gmail.com"}
]
license = {text = "Apache Software License"}
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pydantic>=1.9.2,<3.0.0,!=2.5.0,!=2.9.0",
    "protobuf>=3.20.3",
]

[project.optional-dependencies]
lark = ["lark>=1.1.2"]
mypy-protobuf = ["mypy-protobuf>=3.2.0"]
toml = ["toml>=0.10.2"]
all = ["lark>=1.1.2", "mypy-protobuf>=3.2.0", "toml>=0.10.2"]
dev = [
    "black>=23.3.0",
    "mypy==1.0.0",
    "pytest==6.2.5",
    "isort==5.6.4",
    "coverage==5.5",
    "pre-commit==2.14.0",
    "autoflake==1.4",
    "flake8==3.9.2",
    "email-validator==2.0.0",
    "importlib-metadata==4.11.4",
    "grpcio-tools>=1.40.0",
    "mypy-protobuf==3.2.0",
]

[project.urls]
Homepage = "https://github.com/so1n/protobuf_to_pydantic"
Repository = "https://github.com/so1n/protobuf_to_pydantic"

[project.scripts]
protoc-gen-protobuf-to-pydantic = "protobuf_to_pydantic.plugin.main:main"

[tool.hatch.version]
source = "vcs"
raw-options = { version_scheme = "no-guess-dev" }

[tool.hatch.build.targets.wheel]
packages = ["protobuf_to_pydantic"]

[tool.hatch.build.targets.sdist]
include = [
    "/protobuf_to_pydantic",
    "/README.md",
    "/LICENSE",
]

[tool.protobuf-to-pydantic.format]
black = true
isort = true
autoflake = true

[tool.black]
line-length = 120
target-version = ['py37', 'py38', 'py39', 'py310']

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.autoflake]
in-place = true
remove-all-unused-imports = true
remove-unused-variables = true

[tool.mypy]
disallow_untyped_defs = true
python_executable = ".venv/bin/python"
exclude = [
    "^example/python_example_proto_code/example_proto",
    "^protobuf_to_pydantic/_pydantic_adapter.py",
    "^protobuf_to_pydantic/customer_validator/__init__.py",
    "^protobuf_to_pydantic/customer_validator/v1.py",
    "^protobuf_to_pydantic/customer_validator/v2.py",
    "^protobuf_to_pydantic/customer_con_type/__init__.py",
    "^protobuf_to_pydantic/customer_con_type/v1.py",
    "^protobuf_to_pydantic/customer_con_type/v2.py",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
branch = true
source = ["protobuf_to_pydantic"]
omit = [
    "protobuf_to_pydantic/contrib/proto_parser.py",
    # The plugin cannot be tested,
    # only by checking the running result of the generated code to judge whether the plugin is executed successfully
    "protobuf_to_pydantic/plugin/*",
]

[tool.coverage.report]
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",

    # Don't complain about missing debug-only code:
    "def __repr__",

    # Don't complain if tests don't hit defensive assertion code:
    "raise AssertionError",
    "raise NotImplementedError",

    # Don't complain if non-runnable code isn't run:
    "if 0:",
    "if __name__ == .__main__.:",
    "continue",

    # type hints
    "if TYPE_CHECKING:",
    "pass",

    # error
    "except ImportError:",
    "except ModuleNotFoundError:",
]